--- a/utilities/scss/main.css
+++ b/utilities/scss/main.css
@@ -10000,6 +10000,12 @@ td.btn-collapse {
   content: "" !important;
 }
 
+.img-pro {
+  width: 100%;
+  object-fit: cover;
+  object-position: 50% 50%;
+}
+
 .sidebar-brand img {
   width: 80%;
   padding-bottom: 20px;
